# sequence-transformers-api

./: .gitignore  LICENSE  README.md  pyproject.toml
embedding_api/: __init__.py  app.py
