[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sequence_transformers_api"
dynamic = ["version"]
description = "Embedding API server using Sequence Transformers"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Takuro Sakai", email = "taqu2920.dev@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "uvicorn>=0.26.0",
    "fastapi>=0.109.0",
    "pydantic>=2.5.3",
    "argparse_pydantic>=0.1.3",
    "sentence_transformers>=2.2.2",
]

[tool.setuptools.packages.find]
exclude = ["build", "tests"]
[tool.setuptools.dynamic]
version = {attr = "embedding_api.version"}

[tools.setuptools_scm]
write_to = "embedding_api/_version.py"

